--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url={SPRING_DATASOURCE_URL:jdbc:postgresql://db:5432/socks}
+spring.datasource.url={SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/socks}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.jpa.generate-dll=false
